fix: requirements.txt updated

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-DateTime==5.5
-pytz==2025.2
-setuptools==80.9.0
-tk==0.1.0
-zope.interface==7.2
+colorama==0.4.6
+iniconfig==2.1.0
+packaging==25.0
+pluggy==1.6.0
+Pygments==2.19.2
+pytest==8.4.1
